[project]
name = "codebuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdullah", email = "abdullarajpoot1585@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.14",
    "python-dotenv>=1.1.0",
]

[project.scripts]
codebuddy = "codebuddy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
